--- a/Cloudental-cdi/src/main/webapp/screens/office.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/office.xhtml
@@ -21,10 +21,12 @@
 	<ui:define name="header"/>
 	<ui:define name="body">
 		<p:growl id="growl" showDetail="true" life="5000" />
-		<h:form id="mainForm">
+		<h:form id="menuForm">
 			<p:menubar>  
         	    <p:menuitem value="Reception" action="reception" ajax="false" />
 		    </p:menubar>
+		</h:form>
+		<h:form id="mainForm">
 			<p:tabView id="tabContainer">
 				<p:tab id="schedulerTab" title="Scheduler" titletip="Calendar !">
 					<ui:include src="/screens/scheduler.xhtml"/>
