--- a/Cloudental-cdi/src/main/webapp/screens/scheduler.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/scheduler.xhtml
@@ -16,7 +16,7 @@
 	</p:panel -->
 	
 	
-	<p:schedule id="scheduler" value="#{office.scheduleControler.model}" editable="true" 
+	<p:schedule id="scheduler" value="#{office.scheduleControler.model}" draggable="false" resizable="false" minTime="6" maxTime="24" 
 					widgetVar="visitSchedule" styleClass="scheduler" aspectRatio="1.9"
 					firstHour="8" slotMinutes="5">
         <f:facet name="header">  
