--- a/Cloudental-cdi/src/main/webapp/screens/reception.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/reception.xhtml
@@ -10,12 +10,8 @@
 			<link href="../resources/css/reception-style.css" rel="stylesheet" type="text/css" />
 			<style type="text/css">
 			body {
-				background-image: url(../resources/images/ReceptionBackground.png);
-				background-repeat: no-repeat;
-				margin-left: 10px;
-				margin-top: 10px;
-				margin-right: 10px;
-				margin-bottom: 10px;
+				background-image: url(../resources/images/reception_background.png);
+				background-size: cover;
 			}
 			</style>
 		
