--- a/Cloudental-cdi/src/main/webapp/screens/login.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/login.xhtml
@@ -18,17 +18,23 @@
 
  	<body>
 		<div> 
+	        <h:outputLink id="newUser" value="javascript:void(0)" onclick="dlgCreate.show()" title="Create New User" styleClass="newuserbutton">     
+			    <p:graphicImage value="../resources/images/login/new-user.png" />  
+			</h:outputLink>
+	        <h:outputLink id="contactUs" value="javascript:void(0)" onclick="dlgContact.show()" title="Contact Cloud.M" styleClass="contactUs">     
+			    <p:graphicImage value="../resources/images/login/contact.png" />  
+			</h:outputLink>
+			<br/><br/><br/><br/><br/><br/>
+			<p:graphicImage value="../resources/images/login/logo.png" styleClass="logo"/> 
+			<br/><br/><br/>
 	        <h:form id="form1" name="form1" method="post" action="">
-	           <p:inputText id="username" value="#{loginService.name}" required="true" label="username" styleClass="username"/>  
-	           <h:inputSecret id="password" value="#{loginService.password}" required="true" label="password" styleClass="password" />
-	           <p:selectBooleanCheckbox id="directLogin" value="#{loginService.directlyToOffice}" label="Straight to my office" styleClass="directLogin"/>
+	           <p:inputText id="username" value="#{loginService.name}" required="true" label="username" styleClass="username"/> <br/>  
+	           <h:inputSecret id="password" value="#{loginService.password}" required="true" label="password" styleClass="password" /> <br/>
+	           <p:selectBooleanCheckbox id="directLogin" value="#{loginService.directlyToOffice}" itemLabel="Straight to my office" styleClass="directLogin"/> 
 	           <h:commandButton id="loginButton" value="Enter" action="#{loginService.login}" styleClass="loginbutton" image="../resources/images/login/login.png"/>     
 	        </h:form>
 			<p:growl id="growl" showDetail="true" life="3000" />
 
-	        <h:outputLink id="newUser" value="javascript:void(0)" onclick="dlgCreate.show()" title="Create New User" styleClass="newuserbutton">     
-			    <p:graphicImage value="../resources/images/login/new-user.png" />  
-			</h:outputLink>
 			<p:dialog id="dialogCreate" header="Create New User" widgetVar="dlgCreate" showEffect="explode" >  
 			    <h:form id="dlgFrm">
    			        <h:panelGrid columns="2" cellpadding="5">
@@ -45,9 +51,6 @@
 			        </h:panelGrid>  
 			    </h:form>  
 			</p:dialog>  
-	        <h:outputLink id="contactUs" value="javascript:void(0)" onclick="dlgContact.show()" title="Contact Cloud.M" styleClass="contactUs">     
-			    <p:graphicImage value="../resources/images/login/contact.png" />  
-			</h:outputLink>
 			<br/> 
 			<p:dialog id="dialogContact" header="Contact Cloud.M" widgetVar="dlgContact" showEffect="explode" modal="true">  
 			    <h:form id="dlgFrmContact">
