--- a/Cloudental-cdi/src/main/webapp/screens/patients.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/patients.xhtml
@@ -19,11 +19,32 @@
 	</p:panel>
 
  	<p:contextMenu for="patientList">  
+        <p:menuitem value="Add Address" icon="ui-icon-check" process="patientList" oncomplete="adrsDlg.show()" update="addressDialog"/>
         <p:menuitem value="Details" icon="ui-icon-check" process="patientList" oncomplete="dtlDlg.show()" update="detailsDialog"/>
         <p:menuitem value="Delete" icon="ui-icon-close" process="@this,patientList" 
         			actionListener="#{office.patientManagment.deletePatient}" update="patientList,scheduler"/>
     </p:contextMenu>  
     
+    <p:dialog id="addressDialog" header="New Address for #{office.patientManagment.selectedPatient.surname}" 
+    		  widgetVar="adrsDlg" height="350" >
+    	<p:panelGrid columns="2">
+		    <h:outputLabel value="Country" for="adrsCountry"/>
+		    <h:inputText id="adrsCountry" value="#{office.patientManagment.createAddress.country}" />
+    		<h:outputLabel value="City" for="adrsCity"/>
+		    <h:inputText id="adrsCity" value="#{office.patientManagment.createAddress.city}" />
+		    <h:outputLabel value="Stret" for="adrsStreet"/>
+		    <h:inputText id="adrsStreet" value="#{office.patientManagment.createAddress.street}" />
+		    <h:outputLabel value="Number" for="adrsNumber"/>
+		    <h:inputText id="adrsNumber" value="#{office.patientManagment.createAddress.number}" />
+		    <h:outputLabel value="Postal Code" for="adrsPCode"/>
+		    <h:inputText id="adrsPCode" value="#{office.patientManagment.createAddress.postalcode}" />
+		    <p:commandButton value="Create" id="crtAdrsBtn" 
+		    				 process="@this,adrsCity,adrsCountry,adrsNumber,adrsPCode,adrsStreet" 
+		    				 update="patientList" 
+						 	 actionListener="#{office.patientManagment.createAddress}" 
+						 	 oncomplete="adrsDlg.hide()"/>
+    	</p:panelGrid>
+    </p:dialog>
     <p:dialog id="detailsDialog" header="Patient Details" widgetVar="dtlDlg" height="140" >
     	<p:panelGrid columns="1">
 		    <h:outputLabel id="dtlSurname" value="#{office.patientManagment.selectedPatient.surname}" />
