item 6.b and c patient-styles

--- a/Cloudental-cdi/src/main/webapp/screens/office.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/office.xhtml
@@ -8,10 +8,13 @@
 	<ui:define name="title">My Office </ui:define>
 	<ui:define name="head">
 		<link href="../resources/css/scheduler-style.css" rel="stylesheet" type="text/css" />
+		<link href="../resources/css/patients-style.css" rel="stylesheet" type="text/css" />
 		<style type="text/css">
 		body {
 			background-image: url(../resources/images/office_background.png);
 			background-size: cover;
+			font-family: Arial serif;
+			font-size: 6;
 		}
 		</style>
 	</ui:define>
