--- a/Cloudental-cdi/src/main/webapp/screens/patients.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/patients.xhtml
@@ -23,7 +23,7 @@
 			 			 styleClass="field"/>
 			<h:outputText value="Comments: " styleClass="label"/>
 			<p:inputText id="comment" value="#{crtPatient.comments}" 
-						 styleClass="comment" />
+						 styleClass="field"/>
 			<p:commandButton value="Create" id="crtBtn" styleClass="button"
 						process="@this,name,surname,comment" 
 						update="patientList"
