--- a/Cloudental-cdi/src/main/webapp/screens/base/footer.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/base/footer.xhtml
@@ -7,7 +7,7 @@
 	<h:body>
    		<!--  h:link value="Create New User" outcome="/screens/createUser" /><br/ -->
    		<!--  h:link value="Login" outcome="/screens/welcome" / -->
-   		<h:outputText value="Stage:#{facesContext.application.projectStage}"/>
+   		<!--  h:outputText value="Stage:#{facesContext.application.projectStage}"/ -->
    		
 	</h:body>
  
