--- a/Cloudental-cdi/src/main/webapp/screens/login.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/login.xhtml
@@ -19,12 +19,12 @@
  	<body>
 		<div> 
 	        <h:outputLink id="newUser" value="javascript:void(0)" onclick="dlgCreate.show()" 
-	        				title="Create New User" styleClass="newuserbutton">     
+	        				title="Create New User" >     
 			    <p:graphicImage value="../resources/images/login/new-user.png" />  
 			</h:outputLink>
 	        <br />
 	        <h:outputLink id="contactUs" value="javascript:void(0)" onclick="dlgContact.show()" 
-	        				title="Contact Cloud.M" styleClass="contactUs">     
+	        				title="Contact Cloud.M" >     
 			    <p:graphicImage value="../resources/images/login/contact.png" />  
 			</h:outputLink>
 			<br />
@@ -34,12 +34,12 @@
 			
 	        <h:form id="loginForm" styleClass="loginForm">
 	           <p:inputText id="username" value="#{loginService.name}" required="true" 
-	           				label="username" styleClass="username"/> <br/>  
+	           				label="username" /> <br/>  
 	           <p:password  id="password" value="#{loginService.password}" feedback="false" 
 	           				requiredMessage="Please supply a password" required="true" 
-	           				label="password" styleClass="password" /> <br/>
+	           				label="password" /> <br/>
 	           <p:selectBooleanCheckbox id="directLogin" value="#{loginService.directlyToOffice}" 
-	           				itemLabel="Straight to my office" styleClass="directLogin"/>
+	           				itemLabel="Straight to my office" />
 	           <br/>				 
 	           <h:commandButton id="loginButton" value="Enter" action="#{loginService.login}" styleClass="loginbutton" image="../resources/images/login/login.png"/>     
 	        </h:form>
