--- a/Cloudental-cdi/src/main/webapp/screens/scheduler.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/scheduler.xhtml
@@ -18,7 +18,7 @@
 	
 	<p:schedule id="scheduler" value="#{office.scheduleControler.model}" draggable="false" resizable="false" minTime="6" maxTime="24" 
 					widgetVar="visitSchedule" styleClass="scheduler" aspectRatio="2.5"
-					firstHour="8" slotMinutes="5">
+					firstHour="8" slotMinutes="5" timeZone="#{office.scheduleControler.localTimeZone}">
         <f:facet name="header">  
  	       <p:messages />  
         </f:facet>
