--- a/Cloudental-cdi/src/main/webapp/screens/activities.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/activities.xhtml
@@ -4,7 +4,7 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://java.sun.com/jsf/core">
 
-	<p:treeTable value="#{office.patientManagment.patientListRoot}" var="patient">
+	<!--  p:treeTable value="#{office.patientManagment.patientListRoot}" var="patient">
 		<p:column>
 			<f:facet name="header">Name</f:facet>
 			<h:outputText value="#{patient}" />
@@ -13,5 +13,5 @@
 			<f:facet name="header">Surname</f:facet>
 			<h:outputText value="#{patient}" />
 		</p:column>
-	</p:treeTable>		
+	</p:treeTable -->		
 </html>
