--- a/Cloudental-cdi/src/main/webapp/screens/reception.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/reception.xhtml
@@ -23,17 +23,18 @@
 		            <p:menuitem value="My Account" action="office" ajax="false" />
 		            <p:menuitem value="Preferences" onclick="prfDlg.show()" />
 			    </p:menubar>
-			   <p:dialog id="prefsDialog" header="Email Notification Preferences" widgetVar="prfDlg" height="140" >
-    				<p:panelGrid columns="2">
-		    		    <h:outputLabel value="Mail Content" for="mailText" styleClass="label"/>
-		    		    <h:inputTextarea id="mailText" value="#{userPrefs.prefs.emailcontent}" styleClass="field"/>
+			   <p:dialog id="prefsDialog" widgetVar="prfDlg" width="400" height="300" header="User Preferences">
+	   				<p:panelGrid columns="2" styleClass="preferences">
 		    		    <h:outputLabel value="Daily Reports" for="dailyreports" styleClass="label"/>
 		    		    <p:selectBooleanCheckbox id="dailyreports" value="#{userPrefs.prefs.dailyreports}" styleClass="label" />
 		    		    <h:outputLabel value="E-mail Notifications" for="emailnotify" styleClass="label"/>
 		    		    <p:selectBooleanCheckbox id="emailnotify" value="#{userPrefs.prefs.emailnotification}" styleClass="label" />
-   		    			<p:commandButton id="sabeBtn" styleClass="button" value="Save" actionListener="#{userPrefs.save()}" 
-							 process="@this,mailText,dailyreports,emailnotify" oncomplete="prfDlg.hide();" />
-
+		    		    <h:outputLabel value="Mail Content" for="mailText" styleClass="label"/>
+		    		    <h:inputTextarea id="mailText" value="#{userPrefs.prefs.emailcontent}" styleClass="field"/>
+		    		    <f:facet name="footer">
+	   		    			<p:commandButton id="saveBtn" styleClass="button" value="Save" actionListener="#{userPrefs.save()}" 
+								 process="@this,mailText,dailyreports,emailnotify" oncomplete="prfDlg.hide();" />
+		    		    </f:facet>
 			    	</p:panelGrid>
     			</p:dialog>
 		    </h:form>
@@ -41,9 +42,6 @@
 		<ui:define name="body">
 			<p:growl id="growl" showDetail="true" life="3000" />
 			<h:form id="mainform">
-			</h:form>
-		</ui:define>
-		<ui:define name="footer">
 			<p:scrollPanel styleClass="rss">
 				<p:feedReader value="http://localhost:8080/Cloudental-cdi/resources/rss/news-rss.xml" var="feed" >
 					<h:outputText value="#{feed.title}" style="font-weight: bold"/><br/>
@@ -51,6 +49,10 @@
 					<p:separator />
 				</p:feedReader>
 			</p:scrollPanel>
+			
+			</h:form>
+		</ui:define>
+		<ui:define name="footer">
 		</ui:define>
 	</ui:composition>
 </html>
